--- a/src/pages/signin/SignIn.module.css
+++ b/src/pages/signin/SignIn.module.css
@@ -125,7 +125,7 @@ body {
 
 .viewIcon{
   position: absolute;
-  right: 30px;
+  right: 35px;
 }
 
 
@@ -164,8 +164,7 @@ body {
 .remember {
   display: flex;
   align-items: center;
-  left: 0;
-  bottom: 110px;
+  gap: 6px;
 }
 
 #html {
@@ -232,6 +231,11 @@ body {
   font-weight: 500;
   line-height: normal;
   text-decoration: none;
+}
+
+.loginBtn button:hover {
+  box-shadow: #23AC62 0.5px 0.5px 30px 0px;
+  transition: all 0.2s;
 }
 
 /* ================>> TABLET RESPONSIVE (max-w-1024px) <<===============*/
